OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Subject__c/Onboarding_Requirement_Subject__c.object-meta.xml
<CustomObject>
    <description>Runtime subject records that track which account or contact must satisfy an onboarding requirement.</description>
    <label>Onboarding Requirement Subject</label>
    <nameField>
        <displayFormat>ORS-{000000}</displayFormat>
        <label>Onboarding Requirement Subject Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Requirement Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>