OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Subject__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Requirement_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>