OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Subject__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact_Requirement_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>