OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Subject__c/fields/Onboarding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Requirement__c</fullName>
    <description>Parent onboarding requirement that this subject must satisfy.</description>
    <label>Onboarding Requirement</label>
    <referenceTo>Onboarding_Requirement__c</referenceTo>
    <relationshipLabel>Requirement Subjects</relationshipLabel>
    <relationshipName>Requirement_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>