OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Subject__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <description>Snapshot of the parent onboarding requirement type for evidence-driven subject evaluation.</description>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Requirement_Type_Values</valueSetName>
    </valueSet>
</CustomField>