OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Subject__c/fields/Role_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Role_Snapshot__c</fullName>
    <label>Role Snapshot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>