OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement_Subject__c/validationRules/Require_Exactly_One_Subject.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Exactly_One_Subject</fullName>
    <active>true</active>
    <description>Requires exactly one subject target so each row represents either an account or a contact.</description>
    <errorConditionFormula>OR(
    AND(
        ISBLANK(Account__c),
        ISBLANK(Contact__c)
    ),
    AND(
        NOT(ISBLANK(Account__c)),
        NOT(ISBLANK(Contact__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Populate either Account or Contact, but not both.</errorMessage>
</ValidationRule>